--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jade": "~1.11.0",
     "luxon": "^3.0.3",
     "mongoose": "^6.6.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
